# gtirb-functions

./: .gitignore  .pre-commit-config.yaml  CHANGES.txt  CMakeLists.txt  Dockerfile.ubuntu18  Dockerfile.ubuntu20  README.md  conanfile.py  cpack-config.cmake  gtirb-functions.asd  gtirb-functions.lisp  gtirbFunctionsConfig.cmake.in  gtirb_functions.h  mypy.ini  requirements-dev.txt  setup.py
.ci/: Dockerfile  Dockerfile.build  Dockerfile.centos8  Dockerfile.formatter  Dockerfile.ubuntu18  Dockerfile.ubuntu20  gitlab-ci.yaml  test_install.cpp
cpp/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.ubuntu20  README.md  conanfile.py  create-conan-package.py
cpp/include/gtirb_functions/: gtirb_functions.hpp  version.h.in
cpp/src/: CMakeLists.txt  gtirb_functions.cpp
cpp/src/test/: CMakeLists.txt  gtirb-functions.test.cpp
gtirb_functions/: __init__.py  __main__.py  function.py  version.py
include/gtirb_functions/: gtirb_functions.hpp  version.h.in
src/: CMakeLists.txt  gtirb_functions.cpp
src/test/: CMakeLists.txt  gtirb-functions.test.cpp  main.test.cpp
tests/: hello.v1.gtirb.functions  test_functions.py
